--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>this is my body</h4>
+    <h4>this is my nbody</h4>
     <h1>mom</h1>
 </body>
 </html>
